[package]
name = "nettopbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
async-process = "1.7.0"
async-std = "1.12.0"
base64 = "0.21.2"
bytes = "1.4.0"
env_logger = "0.10.0"
figment = { version = "0.10.10", features = ["env", "yaml"] }
futures = "0.3.28"
futures-core = "0.3.28"
itertools = "0.11.0"
log = "0.4.20"
regex = "1.9.3"
reqwest = "0.11.18"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
url = { version = "2.4.0", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v5"] }
